--- a/S4/C2/index.html
+++ b/S4/C2/index.html
@@ -7,7 +7,7 @@
 
   </head>
   <body>
-    <header>
+    <header class="titulo">
       <h1>Los Mejores juegos de PC del 2018 hasta ahora</h1>
       <p>De todo lo que ha salido hasta la fecha para PC, esto es lo que hemos seleccionado como lo mejor:</p>
       <div class="banner">
