--- a/S6/C3/formularios/index.html
+++ b/S6/C3/formularios/index.html
@@ -44,9 +44,13 @@
         <legend>Hobbies</legend>
         <input type="checkbox" id="pelicula" name="hobbie" value="pelicula">
         <label for="pelicula">Ver pelicula / series</label>
+
         <input type="checkbox" id="musica" name="hobbie" value="Musica">
         <label for="pelicula">Escuchar musica</label>
 
+        <input type="checkbox" id="musica" name="hobbie" value="Musica">
+        <label for="pelicula">Escuchar musica</label>
+        
       </fieldset>
       <button type="submit"> ingresar  </button>
 
